2004-04-28  Derek Price  <derek@ximbiot.com>

	* lock.c (set_lock), subr.c (sleep_past): Assume we have nanosleep.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* root.c (normalize_cvsroot): Use asnprintf in preference to other
	indirections.

2004-04-27  Derek Price  <derek@ximbiot.com>

	Add dirname module from GNULIB.

	* add.c, client.c, commit.c, find_names.c, import.c, lock.c, ls.c,
	repos.c, server.c, subr.c: s/ISDIRSEP/ISSLASH/.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* commit.c, create_adm.c, entries.c, filesubr.c, hash.c, update.c:
	Gratuitious reformatting.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* ls.c (ls_direntproc): Remove unneeded assertion.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* ls.c (ls): Set client_prune_dirs in order to delete any directories
	created by the server.
	(ls_dirleaveproc): Always delete directories created by
	ls_direntproc().
	* sanity.sh (ls): Update to match.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* ls.c: Remove unneeded prototypes.  Add `prune' option.
	(dircount): Remove static global.
	(set_tag, created_dir, ls_prune_dirs): New static globals.
	(ls): Handle new prune option.
	(ls_print_dir): Don't count directories, just remember not to print a
	blank line in front of the first one.  Don't list empty directories
	when prune is specified.
	(ls_delproc): New function to dispose of dirlist.
	(ls_direntproc): Reorganize to assume a directory without a parent must
	be listed.  Create missing directories a la update and checkout so that
	they may be processed.  Use new delproc when creating new list nodes.
	(ls_dirleave_proc): New function to remove directories created by
	ls_direntproc.
	(ls_proc): Call start_recursion() once for each argument so that
	ls_direntproc() may assume that any directory without a parent in the
	dirlist must be listed and others must not unless recursing.
	* sanity.sh (ls): New tests.
	(Thanks to a report from Mark D. Baushke <mdb@cvshome.org>.)
