@@ -41,6 +41,7 @@
 
 /* begin GNULIB headers */
 #include "exit.h"
+#include "getdate.h"
 #include "vasnprintf.h"
 #include "xalloc.h"
 /* end GNULIB headers */
@@ -535,7 +536,6 @@ void write_letter (struct file_info *finfo, int letter);
 int xcmp (const char *file1, const char *file2);
 int yesno (void);
 void *valloc (size_t bytes);
-time_t get_date (char *date, struct timeb *now);
 int Create_Admin (const char *dir, const char *update_dir,
                   const char *repository, const char *tag, const char *date,
                   int nonbranch, int warn, int dotemplate);
